@@ -301,7 +301,7 @@
    "source": [
     "fitmodSK = fitmodOK.clone()\n",
     "err = fitmodSK.delDrift(0)\n",
-    "err = fitmodSK.setMean(0, 20.)"
+    "err = fitmodSK.setMean(20.)"
    ]
   },
   {
