@@ -1739,6 +1739,67 @@ def anam(ax, anamobj, color='blue', linestyle='-', flagLegend=False):
     
     return ax
 
+def drawCircles(m,M,middle = False):
+    x = np.linspace(-m,m,100)
+    plt.plot(x, np.sqrt(m**2-x**2),c="g")
+    plt.plot(x,-np.sqrt(m**2-x**2),c="g")
+    
+    x = np.linspace(-M,M,100)
+    plt.plot(x, np.sqrt(M**2-x**2),c="g")
+    plt.plot(x,-np.sqrt(M**2-x**2),c="g")
+    if middle:
+        mid = .5 * (m+M)
+        x = np.linspace(-mid,mid,100)
+        plt.plot(x, np.sqrt(mid**2-x**2),c="r")
+        plt.plot(x,-np.sqrt(mid**2-x**2),c="r")
+        
+def drawDir(angle,col,R=10000):
+    a = np.deg2rad(angle)
+    u = R*np.array([0,np.cos(a)])
+    v = R*np.array([0,np.sin(a)])
+    plt.plot(u,v,c=col)
+    plt.plot(-u,-v,c=col)
+    
+def drawCylrad(angle,cylrad,R=10000,col="purple"):
+    a = np.deg2rad(angle)
+    x = cylrad/np.sin(a-np.pi/2)
+    
+    u=R*np.array([0,np.cos(a)])
+    v=R*np.array([0,np.sin(a)])
+    
+    plt.plot( u, (v+x),c=col)
+    plt.plot(-u,-(v+x),c=col)
+    plt.plot( u, (v-x),c=col)
+    plt.plot(-u,-(v-x),c=col)
+    
+#Function to get the limit for a lag
+def lagf(i,lag,tol=0,plot=True):
+    m = M = i*lag
+    
+    if plot:
+        plt.axvline(x = m, ymin = 0.,c="r")
+    if tol>0:
+        if i>0:
+            m = m-tol*lag
+            if plot:
+                plt.axvline(x = m, ymin = 0.,c="g")
+        M = M + tol*lag
+        if plot:
+            plt.axvline(x = M, ymin = 0.,c="g")
+    return m,M
+
+def drawTotalDir(lag,nlag,tol,angle,tolangle,cylrad):
+
+    for i in range(nlag):
+        m,M = lagf(i,lag,tol,plot=False)
+        drawCircles(m,M) 
+   
+    drawDir(angle,"black")
+    drawDir(angle+tolangle,"red")
+    drawDir(angle-tolangle,"red")
+    drawCylrad(angle,cylrad)
+    ax=plt.axis("equal")
+    
 def plot(object, name1=None, name2=None, ranks=None, **kwargs):
     
     filetype = type(object).__name__
